# github-copilot-lab

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  apm.yml  pyproject.toml
.apm/instructions/: development.instructions.md
.apm/prompts/: library-change.prompt.md
.apm/skills/developing-the-library/: SKILL.md
.github/extensions/architecture-visualizer/: extension.mjs  graph-layout.mjs
.github/extensions/experiment-repository-structure/: extension.mjs
.github/workflows/: ci.yml
docs/: analysis.md  architecture.md  authoring-experiments.md  byok-and-local-models.md  collecting-run-data.md  deepswe.md  diagnosing-agent-shutdowns.md  results-format.md  swebench.md  visualizing-results.md
docs/adr/: 0000-template.md  0001-record-architecture-decisions.md  0002-filesystem-is-source-of-truth.md  0003-sqlite-derived-index.md  0004-session-log-is-primary-data-source.md  0005-mock-invoker-for-offline-tests.md  0006-separate-analysis-data-from-rendering.md  0007-cli-rich-analysis-before-web-app.md  0008-dry-run-is-ephemeral-plumbing-check.md  0009-absolute-workspace-path-for-copilot.md  0010-keep-secrets-and-debug-logs-out-of-results.md  0011-token-economics-from-session-shutdown.md  0012-auth-preflight-and-trial-diagnostics.md  0012-task-suite-as-experiment-axis.md  0013-auth-preflight-and-trial-diagnostics.md  0014-swebench-task-source-and-docker-grading.md  0015-adopt-pier-for-sandboxed-agent-evals.md  0016-use-deepswe-for-large-benchmark-protocols.md  0017-import-deepswe-as-pier-dataset.md  0018-adopt-pytest-cov-for-local-coverage-analysis.md  0019-use-nested-pier-run-directories.md  0020-remove-legacy-native-harness.md  0021-copilot-cli-egress-allowlist-uses-wildcard-domains.md  0021-interactive-html-dashboards.md  0022-copilot-cli-egress-allowlist-uses-wildcard-domains.md  README.md
examples/swebench/: README.md
examples/swebench/experiments/: offline-demo.yaml  swebench_experiment.py
examples/swebench/fixtures/romans/: romans.py
examples/swebench/fixtures/textnorm/: test_textnorm.py  textnorm.py
examples/swebench/swebench/: instances.json
examples/swebench/tasks/romans-hard/: instruction.md  task.toml
examples/swebench/tasks/romans-hard/environment/: Dockerfile  romans.py
examples/swebench/tasks/romans-hard/tests/: test.sh  test_romans.py
examples/swebench/tasks/textnorm-easy/: instruction.md  task.toml
examples/swebench/tasks/textnorm-easy/environment/: Dockerfile  textnorm.py
examples/swebench/tasks/textnorm-easy/tests/: test.sh
examples/task_suite/: README.md
examples/task_suite/experiments/: suite.yaml  suite_experiment.py
examples/task_suite/fixtures/csvtools/: csvtools.py  test_csvtools.py
examples/task_suite/fixtures/strtools/: test_strtools.py
examples/task_suite/tasks/csv-parser/: instruction.md  task.toml
examples/task_suite/tasks/csv-parser/environment/: Dockerfile  csvtools.py
examples/task_suite/tasks/csv-parser/tests/: test.sh  test_csvtools.py
examples/task_suite/tasks/reverse-words/: instruction.md  task.toml
examples/task_suite/tasks/reverse-words/environment/: Dockerfile  strtools.py
examples/task_suite/tasks/reverse-words/tests/: test.sh  test_strtools.py
examples/tracer_bullet/: README.md
examples/tracer_bullet/experiments/: textstats.yaml  textstats_experiment.py
examples/tracer_bullet/fixtures/textstats/: test_textstats.py  textstats.py
examples/tracer_bullet/tasks/textstats/: instruction.md  task.toml
examples/tracer_bullet/tasks/textstats/environment/: Dockerfile
examples/tracer_bullet/tasks/textstats/solution/: solve.sh
examples/tracer_bullet/tasks/textstats/tests/: test.sh  test_textstats.py
sandbox/: README.md
src/copilot_experiments/: __init__.py  _util.py  analysis.py  auth.py  charts.py  cli.py  deepswe.py  index.py  invoker.py  models.py  pier_backend.py  pier_results.py  pricing.py  render.py  report.py  runner.py  scaffold.py  sessionlog.py  storage.py  swebench.py  workspace.py
src/copilot_experiments/pier_agents/: __init__.py  copilot_cli.py
src/copilot_experiments/templates/experiment_repo/: .gitignore  AGENTS.md.tmpl  README.md.tmpl  apm.yml.tmpl  pyproject.toml.tmpl
src/copilot_experiments/templates/experiment_repo/.apm/instructions/: experiments.instructions.md
src/copilot_experiments/templates/experiment_repo/experiments/: example.yaml  example_fix_bug.py
tests/: conftest.py  test_analysis.py  test_analysis_internals.py  test_auth.py  test_charts.py  test_deepswe.py  test_economics.py  test_index.py  test_invoker.py  test_models.py  test_phases.py  test_pier_agent.py  test_pier_backend.py  test_pier_results.py  test_real_sessions.py  test_render.py  test_runner.py  test_scaffold.py  test_session_edge_cases.py  test_sessionlog.py  test_storage.py  test_swebench.py  test_workspace.py
tests/fixtures/real_sessions/: README.md
tests/fixtures/real_sessions/fix_bug_claude_opus/: copilot-otel.jsonl  events.jsonl
tests/fixtures/real_sessions/fix_bug_gemini_pro/: copilot-otel.jsonl  events.jsonl
tests/fixtures/real_sessions/fix_bug_gpt55/: copilot-otel.jsonl  events.jsonl
tests/fixtures/real_sessions/fix_bug_mai_flash/: copilot-otel.jsonl  events.jsonl
tests/fixtures/sample_task/: seed.txt
(+11 files in other folders)
