[project]
name = "copilot-experiments"
version = "0.2.0"
description = "A library and CLI for building research experiments that exercise GitHub Copilot (primarily Copilot CLI) and collect results."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "dbroeglin" }]
keywords = ["github-copilot", "copilot-cli", "research", "experiments", "evaluation"]
dependencies = [
    "datacurve-pier>=0.3.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
# SWE-bench support. `datasets` is only needed to download instances in
# `swebench-init`; `swebench` (+ Docker) is only needed to grade with `swebench-eval`.
# Both are optional — the core install, the offline example, and the test suite never
# require them. See docs/swebench.md.
swebench = [
    "datasets>=2.18",
    "swebench>=2.1",
]

[project.scripts]
copilot-experiments = "copilot_experiments.cli:app"

[project.urls]
Homepage = "https://github.com/dbroeglin/github-copilot-lab"
Repository = "https://github.com/dbroeglin/github-copilot-lab"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copilot_experiments"]

[tool.hatch.build.targets.wheel.force-include]
"src/copilot_experiments/templates" = "copilot_experiments/templates"

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# Typer relies on function calls (Argument/Option) in parameter defaults.
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
