[project]
name = "copilot-experiments"
version = "0.2.0"
description = "A library and CLI for building research experiments that exercise GitHub Copilot (primarily Copilot CLI) and collect results."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "dbroeglin" }]
keywords = ["github-copilot", "copilot-cli", "research", "experiments", "evaluation"]
dependencies = [
    "datacurve-pier>=0.3.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    # Renders the interactive, self-contained HTML result dashboards (`chart` / `run`).
    "plotly>=5.20",
]

[project.scripts]
copilot-experiments = "copilot_experiments.cli:app"

[project.urls]
Homepage = "https://github.com/dbroeglin/github-copilot-lab"
Repository = "https://github.com/dbroeglin/github-copilot-lab"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copilot_experiments"]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# Typer relies on function calls (Argument/Option) in parameter defaults.
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["copilot_experiments"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
